# FederatedLearners

./: .gitignore  AGENTS.md  README.md  main.py  paper.md  pyproject.toml
composition/: run_dataset_mixer.py  run_dataset_split.py  run_ensemble.py  run_ensemble_validation_split.py  run_ensemble_weight_optimization.py  run_evaluation.py  run_federated_hyperparameter_optimization.py  run_federated_training.py  run_harmonized_data.py  run_hyperparameter_optimization.py  run_hyperparameter_sweep.py  run_inclusive_federated_training.py  run_inference.py  run_local_training.py  run_model_matrix_evaluation.py  run_training_dashboard.py
configs/: dataset_split.toml  ensemble_L1_Fexcl1.toml  ensemble_L1_Fincl.toml  ensemble_L2_Fexcl2.toml  ensemble_L2_Fincl.toml  ensemble_L3_Fexcl3.toml  ensemble_L3_Fincl.toml  eval_fexcl1_bank1.toml  eval_fexcl2_bank2.toml  eval_fexcl3_bank3.toml  eval_fincl_bank1.toml  eval_fincl_bank2.toml  eval_fincl_bank3.toml  eval_global_bank1.toml  eval_global_bank2.toml  eval_global_bank3.toml  eval_local_bank1.toml  eval_local_bank2.toml  eval_local_bank3.toml  evaluation.toml  federated.toml  federated_banks_1_2.toml  federated_banks_1_3.toml  federated_banks_2_3.toml  harmonized_data.toml  inclusive_federated.toml  inference.toml  local_training.toml  local_training_bank_1.toml  local_training_bank_2.toml  local_training_bank_3.toml  local_training_global.toml  model.toml
datasets/: README
docs/: dataset_mixer_stage.md  ensemble_validation_split_stage.md  ensemble_weight_optimization_stage.md  evaluation_stage.md  federated_hyperparameter_optimization_stage.md  federated_training_stage.md  harmonized_data_stage.md  hyperparameter_optimization_stage.md  inclusive_federated_training_stage.md  inference_stage.md  local_training_stage.md  model_matrix_evaluation_stage.md  training_dashboard_stage.md
domain/: evaluation_service.py
federated_demo/: __init__.py  client.py  data.py  evaluate_global.py  main.py  model.py  server.py  train_eval.py
notebooks/: dataset_harmonization.ipynb
scripts/: collect_results.py  comparison_report.py  run_all.sh  run_inference.sh  (+28 more)
(+215 files in other folders)
