[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "federated-learners-demo"
version = "0.1.0"
description = "Simple federated learning demo with PyTorch"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
  "pydantic>=2.7.0",
  "tqdm>=4.66.0",
  "tomli>=2.4.0",
  "scikit-learn>=1.5.0",
]

[project.scripts]
fl-demo = "federated_demo.main:main"
fl-server = "federated_demo.server:main"
fl-client = "federated_demo.client:main"
fl-evaluate = "federated_demo.evaluate_global:main"

[tool.setuptools.packages.find]
include = ["federated_demo*"]
